[package]
name = "gnome-screenshots-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.1.1", features = ["serde"] }
image = "0.24.7"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
